force-app/main/default/objects/Aprobadores__mdt/Aprobadores__mdt.object-meta.xml
<CustomObject>
    <label>Aprobadores</label>
    <pluralLabel>Aprobadores</pluralLabel>
</CustomObject>