force-app/main/default/objects/Aprobadores__mdt/fields/Aprobador1__c.field-meta.xml
<CustomField>
    <fullName>Aprobador1__c</fullName>
    <label>Aprobador1</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>