force-app/main/default/objects/Aprobadores__mdt/fields/Aprobador2__c.field-meta.xml
<CustomField>
    <fullName>Aprobador2__c</fullName>
    <label>Aprobador2</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>