force-app/main/default/objects/Aprobadores__mdt/fields/Aprobador3__c.field-meta.xml
<CustomField>
    <fullName>Aprobador3__c</fullName>
    <label>Aprobador3</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>