force-app/main/default/objects/Aprobadores__mdt/fields/Extra__c.field-meta.xml
<CustomField>
    <fullName>Extra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extra</label>
    <type>Checkbox</type>
</CustomField>