force-app/main/default/objects/Aprobadores__mdt/fields/Menos_5__c.field-meta.xml
<CustomField>
    <fullName>Menos_5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Menos 5%</label>
    <type>Checkbox</type>
</CustomField>