force-app/main/default/objects/Aprobadores__mdt/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offering</label>
    <type>Checkbox</type>
</CustomField>