force-app/main/default/objects/Aprobadores__mdt/fields/Sede__c.field-meta.xml
<CustomField>
    <fullName>Sede__c</fullName>
    <label>Sede</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1210</fullName>
                <default>true</default>
                <label>Serbatic</label>
            </value>
            <value>
                <fullName>1000</fullName>
                <label>VASS Madrid</label>
            </value>
            <value>
                <fullName>4410</fullName>
                <label>VASS Perú</label>
            </value>
            <value>
                <fullName>4110</fullName>
                <label>VASS Chile</label>
            </value>
            <value>
                <fullName>1110</fullName>
                <label>Nateevo</label>
            </value>
            <value>
                <fullName>VDSHOP</fullName>
            </value>
            <value>
                <fullName>VASS México</fullName>
            </value>
            <value>
                <fullName>2110</fullName>
                <label>VASS UK</label>
            </value>
            <value>
                <fullName>VASS Benelux</fullName>
            </value>
            <value>
                <fullName>4210</fullName>
            </value>
            <value>
                <fullName>1800</fullName>
                <label>VASS Galicia</label>
            </value>
            <value>
                <fullName>Comunytek</fullName>
            </value>
            <value>
                <fullName>CRI</fullName>
            </value>
            <value>
                <fullName>1410</fullName>
            </value>
            <value>
                <fullName>4000</fullName>
                <label>Nateevo México</label>
            </value>
            <value>
                <fullName>4001</fullName>
                <label>Nateevo M360</label>
            </value>
            <value>
                <fullName>4010</fullName>
                <label>Nateevo Colombia</label>
            </value>
            <value>
                <fullName>2811</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>