force-app/main/default/objects/Aprobadores__mdt/fields/SW__c.field-meta.xml
<CustomField>
    <fullName>SW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SW</label>
    <type>Checkbox</type>
</CustomField>